@@ -100,6 +100,8 @@ Ankur Kothari (trim-app.sh)</p>
 	Ian Blackburn<br>
 	Noel Billig<br>
 	Charles Wallace<br>
+	Derek Knight<br>
+	Dan Young<br>
 	</p></blockquote>
 
 <h4>With special thanks to...</h4>
